Fixed a couple spacing issues for the demo.

--- a/css/creative.css
+++ b/css/creative.css
@@ -114,7 +114,7 @@ aside {
 .navbar-default .nav > li.active > a,
 .navbar-default .nav > li.active > a:focus {
   color: #F05F40 !important;
-  background-color: transparent;
+  background-color: white;
 }
 .navbar-default .nav > li.active > a:hover,
 .navbar-default .nav > li.active > a:focus:hover {
